name:          denki-taipu
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        sransara
maintainer:    git@sransara.com
build-type:    Simple
cabal-version: >= 1.10

executable denki-taipu
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -Wall
